# WildfireIQ

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  ICICET2026_Abstract_WildfireIQ.docx  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  datalayer.markdown  implementationplan.markdown  logic.md  package.json  pnpm-lock.yaml  project_timeline.tex
apps/api/: README.md  pyproject.toml
apps/api/tests/: test_aq_jobs_smoke.py  test_data_quality.py  test_fire_jobs_smoke.py  test_ingest.py  test_routers.py  test_weather_jobs_smoke.py
apps/api/wildfireiq_api/: __init__.py  constants.py  db.py  main.py  paths.py  scheduler.py  settings.py
apps/api/wildfireiq_api/ingest/: __init__.py  base.py  bcem_evac.py  climatedata_projections.py  cwfis_fwi.py  databc_fires_current.py  databc_fires_historical.py  derived_fires_unified.py  derived_fwi.py  derived_region_weather.py  derived_seasonal_metrics.py  eccc_climate.py  firework_smoke.py  firms_hotspots.py  geomet_aqhi.py  open_meteo.py  open_meteo_aq.py  registry.py  waqi.py
apps/api/wildfireiq_api/ml/: aq_infer.py  export_onnx.py  features.py  fires_unified.py  fwi.py  risk_infer.py  seasonal_metrics.py  train_aq.py  train_risk.py  trends.py
apps/api/wildfireiq_api/routers/: _data.py  _envelope.py  admin.py  aq.py  climate.py  evac.py  fires.py  firesmart.py  fwi.py  risk.py  weather.py
apps/web/: biome.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/research/: aq_forecaster_v1.metrics.json  wildfire_risk_v1.md  wildfire_risk_v1.metrics.json
apps/web/src/: app.css  app.tsx  main.tsx  vite-env.d.ts
apps/web/src/features/: _PlaceholderCard.tsx
apps/web/src/features/about/: AboutView.tsx
apps/web/src/shell/: AppShell.tsx  ErrorBoundary.tsx  LeftRail.tsx  RouteLoader.tsx  Splash.tsx  TopBar.tsx
apps/web/src/stores/: filters.ts  globe.ts  layers.ts  smoke.ts
data/firesmart/: firesmart_actions.json
data/geo/: .gitkeep  health_guidance.json  kamloops_neighbourhoods.geojson  thompson_okanagan.geojson
data/models/aq_forecaster_v1/: features.json
data/models/aq_forecaster_v1/h1/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h12/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h24/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h3/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h36/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h48/: q10.txt  q50.txt  q90.txt
data/models/aq_forecaster_v1/h6/: q10.txt  q50.txt  q90.txt
data/models/wildfire_risk_v1/: calibrator.joblib  features.json  metrics.json  model.onnx  model.txt
docs/: data-dictionary.md
docs/progress/: phase-0-complete.md  phase-1-complete.md  phase-2-complete.md  phase-3-complete.md  phase-4-complete.md
documents/: WildfireIQ-Report.tex  api-keys-setup.md  architecture.md  data-layer.md  logic.md
documents/model-cards/: aq_forecaster_v1.md
scripts/ingest/: bootstrap.py
(+57 files in other folders)
