[project]
name = "wildfireiq-api"
version = "0.1.0"
description = "WildfireIQ Kamloops backend — ingestion, ML inference, REST API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Deeparsh Singh Dang" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

# Geo + ML deps deferred to Phase 1 / Phase 3 to keep Phase 0 install fast.
# uv add geopandas shapely rasterio xarray scikit-learn lightgbm xgboost shap onnxmltools

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wildfireiq_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
