[project]
name = "wildfireiq-api"
version = "0.1.0"
description = "WildfireIQ Kamloops backend — ingestion, ML inference, REST API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Deeparsh Singh Dang" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "duckdb>=1.1",
    "pandas>=2.2",
    "numpy>=1.26,<3",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
    "orjson>=3.10",
    # Phase 1 — geo + parsing
    "shapely>=2.0",
    "pyarrow>=17.0",
    "h3>=4.1",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
    "shap>=0.51.0",
    "joblib>=1.5.3",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.26.0",
    "onnxconverter-common>=1.16.0",
    "skl2onnx>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

# Geo + ML deps deferred to Phase 1 / Phase 3 to keep Phase 0 install fast.
# uv add geopandas shapely rasterio xarray scikit-learn lightgbm xgboost shap onnxmltools

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wildfireiq_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
